feat(idp): support login page background configuration
This revision introduces a new environment variable
`IDP_LOGIN_BACKGROUND_URL` that overrides the default background image
of the IDP login page when present.

--- a/services/idp/src/app.css
+++ b/services/idp/src/app.css
@@ -24,6 +24,8 @@ strong {
   background-repeat: no-repeat;
   background-position: center;
   z-index: 0;
+  display: flex;
+  width: 100%;
 }
 
 #loader {
