[docs-only] Fixes doc adoc table templates

--- a/docs/templates/ADOC_extended.tmpl
+++ b/docs/templates/ADOC_extended.tmpl
@@ -2,13 +2,12 @@
 
 [caption=]
 .Environment variables with extended scope not included in a service
-[width="100%",cols="~,~,~,~",options="header"]
+[width="100%",cols="35%,10%,18%,~"",options="header"]
 |===
 | Name
 | Type
 | Default Value
 | Description
-
 {{- range .Variables}}
 
 {{- if .Ignore }}
